traffic-policy/retry/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1-retry
spec:
  hosts:
  - service1
  http:
  - route:
    - destination:
        host: service1
    retries:
      attempts: 5
      perTryTimeout: 20s
